objects/FeatureMaster__c/FeatureMaster__c.object-meta.xml
<CustomObject>
    <description>検索フィルター（LWC）で「チェックボックス」として表示したり、物件詳細画面で「アイコン付き」で表示したりする際の元データとなります。
設備名の例：「オートロック」「宅配BOX」「ペット可」</description>
    <label>設備マスタ</label>
    <nameField>
        <label>設備名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>