objects/FeatureMaster__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>セキュリティ</fullName>
            </value>
            <value>
                <fullName>キッチン</fullName>
            </value>
            <value>
                <fullName>バス・トイレ・洗面</fullName>
            </value>
            <value>
                <fullName>収納</fullName>
            </value>
            <value>
                <fullName>通信・放送</fullName>
            </value>
            <value>
                <fullName>冷暖房・空調</fullName>
            </value>
            <value>
                <fullName>共用設備</fullName>
            </value>
            <value>
                <fullName>条件・その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>