objects/FeatureMaster__c/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <inlineHelpText>LWCでアイコンを表示するためのSLDS名。例：utility:lock, utility:wifi, standard:home
https://www.lightningdesignsystem.com/2e1ef8501/p/83309d-icons</inlineHelpText>
    <label>SLDSアイコン名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>