objects/FeatureMaster__c/fields/SearchKeywords__c.field-meta.xml
<CustomField>
    <fullName>SearchKeywords__c</fullName>
    <inlineHelpText>Agentforceが類義語を認識しやすくするためのキーワード。
例：「インターネット, Wi-Fi, ネット無料」</inlineHelpText>
    <label>AI検索用タグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>