objects/FeatureMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SearchKeywords__c</columns>
    <columns>IconName__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>